update readme, play around with d3, log for options when samppling

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -3,12 +3,13 @@
 <head>
   <title>Dummy</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
   <%= csrf_meta_tags %>
+  <% if content_for?(:header) %><%= yield(:header) %><% end %>
 </head>
 <body>
-
+1
 <%= yield %>
-
+2
 </body>
 </html>
